# dudi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  const.f90  const.f95  dataoutmod.f90  dataoutmod.f95  define_types.f90  define_types.f95  deposition.py  distributions_fun.f90  distributions_fun.f95  enceladus_example.f90  enceladus_example.f95  europa_example.f90  europa_example.f95  fort.666  gu.f90  gu.f95  help.f90  help.f95  image_construction.f90  image_construction.f95  inputdata.f90  inputdata.f95  integrator.f90  integrator.f95  io_example.f90  io_example.f95  main_program.f90  main_program.f95  pyproject.toml  twobody_fun.f90  twobody_fun.f95
.github/workflows/: ci.yml  pre-commit.yml
examples/: enceladus_example.f90  europa_example.f90  flyby_profile.f90  io_example.f90  main_program.f90  plume_horizontal_structure.f90  plume_vert_slice.f90
input_data_files/: E2_1.6.txt
python_interface/: README.md  __init__.py
python_interface/dudi/: _bridge_ctypes.py  api.py  models.py  typing.py
python_interface/examples/: enceladus_example.py  io_example.py  minimal.py
python_interface/fortran_bridge/: build_ctypes_bridge.sh  py_bridge.f90
scripts/: R-packages_list.R  deposition.py  e2plot.py  flyby_plots.R  plot_horizontal_structure.R  plot_vertical_structure.R  volcano_image.py
src/: batching.f90  bgmod.f90  comparison_utils.f90  const.f90  dataoutmod.f90  define_types.f90  distributions_fun.f90  gu.f90  help.f90  image_construction.f90  inputdata.f90  integrator.f90  main_program.f90  twobody_fun.f90
(+2 files in other folders)
