[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dudi"
version = "1.3.0"
description = "Python interface to the DUDI Fortran dust distribution model"
readme = "python_interface/README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.package-dir]
"" = "python_interface"

[tool.setuptools.packages.find]
where = ["python_interface"]
include = ["dudi"]
namespaces = false
